# cpu2os

./: .gitignore
02-系統程式/01-系統軟體/gcc/02-link/: sum.s
02-系統程式/01-系統軟體/gcc/03-toolchain/: sum.s
02-系統程式/_books/_code/02-compiler/08-comment/: compiler.js
02-系統程式/_books/_code/02-compiler/08-comment4lang/: compiler.rs  區域變數的尋找.md
02-系統程式/_books/_code/02-compiler/08-comment_v1/: compiler.c  compiler.py
02-系統程式/_books/_code/02-compiler/09-print/: compiler.py
02-系統程式/_books/_code/02-compiler/10-debug/: compiler.py
02-系統程式/_books/_code/02-compiler/11-json/: bnf.md  compiler.py
02-系統程式/_books/_code/02-compiler/12-loop/: compiler.c  compiler.js
02-系統程式/_books/_code/02-compiler/12-loop_v2/: compiler.py  compiler.rs
02-系統程式/_books/_code/02-compiler/13-else_comment/: compiler.py
02-系統程式/_books/_code/02-compiler/14-syscall/: compiler.c  compiler.js  compiler.py  compiler.rs  jstest.sh  pytest.md  pytest.sh  test.sh
02-系統程式/_rust/_doc/: async機制的實作.md  rust與go在高並發的效能.md
02-系統程式/_rust/_test/: _ai.md
02-系統程式/_rust/_test/integrate_test1/: Cargo.toml  run.md
02-系統程式/_rust/_test/integrate_test2/: run.md
02-系統程式/_rust/_test/integrate_test2/tests/: my_tests.rs
02-系統程式/_rust/_test/unittest1/: Cargo.toml  run.md
02-系統程式/_rust/_test/unittest1/src/: main.rs
02-系統程式/_rust/ai/IDE/: README.md
02-系統程式/_rust/ai/burn/: README.md
02-系統程式/_rust/ai/candle/: README.md
02-系統程式/_rust/ai/candle/linear_regression/: Cargo.toml
02-系統程式/_rust/os/eos1/: .gitignore
02-系統程式/_rust/web/axum/blog-form/: Cargo.toml  blog.db
02-系統程式/_rust/web/axum/blog-form/src/: main.rs
(+73 files in other folders)
