[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-sessions = "0.12" # 處理 Session
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tera = "1.19"
axum-extra = { version = "0.9", features = ["form"] }
